--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -4,6 +4,9 @@
     width: 100%;
     min-height: 10vh;
 
+    position: fixed;
+    top: 0;
+
     margin-bottom: 1px;
     border-bottom-style: solid;
     border-bottom-color: var(--secondary-bg-color);
@@ -13,7 +16,6 @@
     display: flex;
     align-items: center;
 }
-
 
 .logo {
     margin: 1em 5em 1em 5em;
@@ -35,7 +37,15 @@
 .nav-item {
     margin: 0 1em 0 1em;
     color: var(--primary-text-color);
-    text-decoration: none;
+    text-decoration: underline;
+    text-decoration-color: rgba(0, 0, 0, 0);
+}
+
+.nav-item-active {
+    margin: 0 1em 0 1em;
+    color: var(--primary-text-color);
+    text-decoration: underline;
+    text-decoration-color: rgba(0, 0, 0, 1);
 }
 
 .nav-item:hover {
