--- a/src/home/tiles/HeroTile.css
+++ b/src/home/tiles/HeroTile.css
@@ -2,6 +2,7 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    margin-top: 8vh;
 
     border-top-right-radius: 0;
     border-top-left-radius: 0;
