--- a/public/blog/Blog.css
+++ b/public/blog/Blog.css
@@ -132,7 +132,7 @@ a {
 }
 
 #text-tile-wrapper {
-    margin-top: 10vh;
+    padding-top: 5vh;
     background-color: var(--primary-bg-color);
     width: 100%;
     display: flex;
@@ -147,3 +147,98 @@ a {
 #text-entry {
     width: 60%;
 }
+
+#hero-wrapper {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 8vh;
+
+    border-top-right-radius: 0;
+    border-top-left-radius: 0;
+
+    padding-top: 5em;
+    padding-bottom: 5em;
+}
+
+@media screen and (max-width: 450px) {
+    #hero-wrapper {
+        padding-top: 1em;
+        padding-bottom: 1em;
+    }
+}
+
+.hero {
+
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap-reverse;
+
+    font-size: x-large;
+}
+
+.hero-title {
+    margin-left: 1em;
+    margin-right: 1em;
+    text-align: center;
+}
+
+.hero-column {
+    float: left;
+    width: 45%;
+    display: flex;
+    justify-content: center;
+}
+/* Clear floats after the columns */
+.hero-column:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+#hero-image {
+    width: 350px;
+}
+
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
+@media screen and (max-width: 850px) {
+    .hero-column {
+        width: 100%;
+    }
+
+    #hero-image {
+        width: 70%;
+    }
+}
+@media screen and (max-width: 350px) {
+    .hero-column {
+        width: 90%;
+    }
+
+    #hero-image {
+        width: 250px;
+    }
+}
+
+@media screen and (min-width: 1000px) {
+    #hero-image {
+        width: 450px;
+    }
+}
+
+@media screen and (min-width: 1500px) {
+    .hero-column {
+        font-size: xx-large;
+    }
+
+    #hero-image {
+        width: 700px;
+    }
+}
+
