--- a/src/header/Footer.css
+++ b/src/header/Footer.css
@@ -14,6 +14,6 @@
 .footer img{
     width: 1.5em;
     margin: 0.5em 1em 0.5em 1em;
-    filter: saturate(0%) brightness(70%) contrast(1000%);
+    filter: saturate(0%) brightness(70%) contrast(1000%) invert(var(--inverse-filter));
 }
 
