--- a/public/blog/Blog.css
+++ b/public/blog/Blog.css
@@ -20,7 +20,7 @@ code {
 
 .App {
     width: calc(100vw - 2em);
-    margin: 1em 1em 1em 1em;
+    margin: 0em 1em 1em 1em;
 }
 
 .main-wrapper {
@@ -150,26 +150,15 @@ a {
 
 #hero-wrapper {
     width: 100%;
+    min-height: 100vh;
     display: flex;
     flex-wrap: wrap;
-    margin-top: 8vh;
 
     border-top-right-radius: 0;
     border-top-left-radius: 0;
-
-    padding-top: 5em;
-    padding-bottom: 5em;
-}
-
-@media screen and (max-width: 450px) {
-    #hero-wrapper {
-        padding-top: 1em;
-        padding-bottom: 1em;
-    }
 }
 
 .hero {
-
     margin-top: 5vh;
     margin-bottom: 5vh;
 
@@ -209,18 +198,15 @@ a {
 /* Responsive layout - makes the three columns stack on top of each other instead of next to each other on smaller screens (600px wide or less) */
 @media screen and (max-width: 850px) {
     .hero-column {
-        width: 100%;
+        width: 90%;
     }
 
     #hero-image {
+        margin-top: 10%;
         width: 70%;
     }
 }
 @media screen and (max-width: 350px) {
-    .hero-column {
-        width: 90%;
-    }
-
     #hero-image {
         width: 250px;
     }
