--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -59,3 +59,9 @@
         margin: 1em 1em 1em 1em;
     }
 }
+
+@media screen and (min-width: 1500px) {
+    .header {
+        font-size: xx-large;
+    }
+}
