usable blogpost workflow

--- a/templates/htmltemplate.html
+++ b/templates/htmltemplate.html
@@ -9,7 +9,7 @@
             name="description"
             content="$title$"
     />
-    <title>Paul Mayer</title>
+    <title>$title$</title>
 
     <meta charset="utf-8"/>
     <link rel="icon" href="public/img/logo-192.png"/>
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <div class="hero-column">
-                    <img id="hero-image" src="/blog/$key$/preview.png" alt="Blog Presentation" />
+                    <img id="hero-image" src="/blog/img/$picture$" alt="" />
                 </div>
             </div>
         </div>
